# mytget

./: .gitignore  AUTHORS  BUGS  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  Makefile.mac  README  README.md  aclocal.m4  cmake_install.cmake  config.h.in  configure  configure.ac  configure.in  install_manifest.txt
autom4te.cache/: output.0  requests  traces.0
rpm/: mytget-build.sh  mytget-buildpe.sh  mytget-buildqa.sh  mytget.spec
script/: insert_copyright.sed
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  advio.cpp  advio.h  block.cpp  block.h  cmake_install.cmake  debug.cpp  debug.h  downloader.cpp  downloader.h  ftp.cpp  ftp.h  ftpparser.cpp  ftpparser.h  ftpplugin.cpp  ftpplugin.h  header.cpp  header.h  http.cpp  http.h  httpplugin.cpp  httpplugin.h  macro.h  myget.h  mytget  mytget.cpp  mytget.h  plugin.cpp  plugin.h  progressbar.cpp  progressbar.h  proxy.cpp  proxy.h  tags  task.cpp  task.h  tcp.cpp  (+6 more)
