bin_PROGRAMS = mytget

INCLUDES = @OPENSSL_CFLAGS@
mytget_LDADD = @OPENSSL_LIBS@

mytget_SOURCES = \
	macro.h \
	debug.h \
	debug.cpp \
	advio.h \
	advio.cpp \
	tcp.h \
	tcp.cpp \
	url.h \
	url.cpp \
	utils.h \
	utils.cpp \
	block.h \
	block.cpp \
	header.h \
	header.cpp \
	plugin.h \
	plugin.cpp \
	proxy.h \
	proxy.cpp \
	task.h \
	task.cpp \
	http.h \
	http.cpp \
	httpplugin.h \
	httpplugin.cpp \
	ftp.h \
	ftp.cpp \
	ftpparser.h \
	ftpparser.cpp \
	ftpplugin.h \
	ftpplugin.cpp \
	downloader.h \
	downloader.cpp \
	myget.h \
	myget.cpp \
	mytget.cpp \
	progressbar.h \
	progressbar.cpp
